--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 #banner {
-    border-image-width: 50%;
+    width: 1920px;
 }
 
 
@@ -7,5 +7,15 @@
 body {
     background-color: #1e1e1e;
     font-family: 'Fira Code';
+    color: #999999;
     font-size: 10pt;
+}
+
+
+ul {
+    padding-left: 160px;
+}
+p {
+    
+    padding-left: 160px;
 }
